--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,24 @@
-<app-signInForm></app-signInForm>
-<hr>
-<app-signUpForm></app-signUpForm>
+<div class="loginPage">
+    <div class="sign">
+        <div>
+            <h2>TournamentPlanner</h2>
+            <p>
+                With the idea of building a functional productivity app that aligns with our interests, we created the
+                Tournament Planner App. It lets you organize tournaments that could be anything from a basketball
+                tourney to an esports one.</p>
 
+            <p>The App works like this: A user organizes the tournament setting whether it's single elimination, double,
+                or round robin. Another user signs up to participate to any tournament currently available. The
+                organizer then updates the app according to the win/loss state of the participants in the tournament and
+                each participant can check their place in the tournament.</p>
+
+            <p>Developed using Angular, Express, Passport, Sequelize, Material UI.</p>
+        </div>
+    </div>
+    <div class="sign">
+        <h1>SIGN IN</h1>
+        <app-signInForm></app-signInForm>
+        <h1>SIGN UP</h1>
+        <app-signUpForm></app-signUpForm>
+    </div>
+</div>
