--- a/src/app/check-tournament-child/check-tournament-child.component.html
+++ b/src/app/check-tournament-child/check-tournament-child.component.html
@@ -1,8 +1,24 @@
 <div *ngIf="selectedTournament">
-{{selectedTournament.name}}
-{{selectedTournament.description}}
-{{selectedTournament.contact}}
-{{selectedTournament.type}}
-<app-display></app-display>
-<button (click)="joinTournament(selectedTournament)">Join</button>
+<div class="cardShow">
+        <mat-card class="tourneyCard">
+            <mat-card-header>
+                <mat-card-title>{{selectedTournament.name}}</mat-card-title>
+                <mat-card-subtitle>{{selectedTournament.type}}</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <h3>Description</h3>
+                <p>{{selectedTournament.description}}</p>
+                <h3>Contact Information</h3>
+                <p>{{selectedTournament.contact}}</p>
+                <h3>Participants</h3>
+                <app-display *ngIf="toggler"></app-display>
+              </mat-card-content>
+            <mat-card-actions>
+                <button mat-button (click)="joinTournament(selectedTournament)">JOIN</button>
+            </mat-card-actions>
+        </mat-card>
+    
 </div>
+</div>
+
+
