--- a/src/app/signUpForm/signUpForm.component.html
+++ b/src/app/signUpForm/signUpForm.component.html
@@ -1,96 +1,29 @@
-<h1>SIGNUP</h1>
-<div class="submit-form">
-    <div>
-      <div class="form-group">
-        <label for="userName">Username</label>
-        <input
-          type="text"
-          class="form-control"
-          id="signUpUserName"
-          required
-          [(ngModel)]="signUpUser.userName"
-          name="userName"
-        />
-      </div>
-  
-      <div class="form-group">
-        <label for="email">Email Address</label>
-        <input
-          class="form-control"
-          id="emailAddress"
-          required
-          [(ngModel)]="signUpUser.emailAddress"
-          name="emailAddress"
-          type="email"
-        />
-      </div>
+<div class="signUpForm">
 
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input
-          class="form-control"
-          id="signUpPassword"
-          required
-          [(ngModel)]="signUpUser.password"
-          name="password"
-        />
-      </div>
-      <div class="form-group">
-          <label for="type">User Type</label>
-          <select
-            class="form-control"
-            id="userType"
-            required
-            [(ngModel)]="signUpUser.userType"
-            name="userType">
-                <option disabled>Select Your Account Type</option>
-                <option value="participant">Participant</option>
-                <option value="Organizer">Organizer</option>
-        </select>
-      </div>
-  
-      <button (click)="signUpUserFunction()" class="btn btn-success">Submit</button>
-    </div>
-  </div>
+  <mat-form-field appearance="outline">
+    <mat-label>Username</mat-label>
+    <input matInput id="signUpUserName" required [(ngModel)]="signUpUser.userName" name="userName" />
+  </mat-form-field>
 
+  <mat-form-field appearance="outline">
+    <mat-label>Email Address</mat-label>
+    <input matInput required [(ngModel)]="signUpUser.emailAddress" name="emailAddress" type="email" />
+  </mat-form-field>
 
+  <mat-form-field appearance="outline">
+    <mat-label>Password</mat-label>
+    <input matInput id="signUpPassword" required [(ngModel)]="signUpUser.password" name="password" />
+  </mat-form-field>
 
+  <mat-form-field appearance="outline">
+    <mat-label>User Type</mat-label>
+    <mat-select id="userType" required [(ngModel)]="signUpUser.userType" name="userType">
+      <mat-option disabled>Select Your Account Type</mat-option>
+      <mat-option value="participant">Participant</mat-option>
+      <mat-option value="Organizer">Organizer</mat-option>
+    </mat-select>
+  </mat-form-field>
 
-<!-- <div>
-    <form action="http://localhost:3000/sign-up" method="post">
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Username</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="userName" id="userName" placeholder="Username">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-                <input type="email" class="form-control" name="emailAddress" id="emailAddress" placeholder="johndoe@gmail.com">
-            </div>
-        </div>
+</div>
 
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Password</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="password" id="password" placeholder="Password">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Account Type</label>
-            <div class="col-sm-10">
-                <select type="text" class="form-control" name="userType" id="userType">
-                    <option disabled>Select your Account Type</option>
-                    <option value="Participant">Participant</option>
-                    <option value="Organizer">Organizer</option>
-                </select>
-            </div>
-        </div>
-        <div class="row">
-            <div class="local-signin col-sm-8">
-                <button type="submit" class="btn-local btn btn-success" id="local-btn">Sign-Up</button>
-            </div>
-        </div>
-    </form>
-</div> -->
+<button mat-raised-button color="primary" (click)="signUpUserFunction()" class="btn btn-success">Submit</button>
