--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100%; margin: 0; background-color: rgba(0,0,0,0.65); color: #ffffff; font-family: 'Rubik', "Helvetica Neue", sans-serif; overflow: auto}
+.mat-form-field {
+    color: white;
+}
