--- a/src/app/check-tournament-child/check-tournament-child.component.html
+++ b/src/app/check-tournament-child/check-tournament-child.component.html
@@ -1,24 +1,30 @@
-<div *ngIf="selectedTournament">
-<div class="cardShow">
+<div *ngIf="selectedTournament" class="cardShow">
+
         <mat-card class="tourneyCard">
             <mat-card-header>
+                <div mat-card-avatar class="header-image"></div>
                 <mat-card-title>{{selectedTournament.name}}</mat-card-title>
                 <mat-card-subtitle>{{selectedTournament.type}}</mat-card-subtitle>
             </mat-card-header>
-            <mat-card-content>
+            <mat-divider></mat-divider>
+            <div class="horizontalCard">
+            <div>
                 <h3>Description</h3>
                 <p>{{selectedTournament.description}}</p>
-                <h3>Contact Information</h3>
+                <h3>Email</h3>
                 <p>{{selectedTournament.contact}}</p>
+            </div>
+            <mat-divider [vertical]="true"></mat-divider>
+            <div>
                 <h3>Participants</h3>
                 <app-display *ngIf="toggler"></app-display>
-              </mat-card-content>
-            <mat-card-actions>
-                <button mat-button (click)="joinTournament(selectedTournament)">JOIN</button>
-            </mat-card-actions>
+                <mat-card-actions>
+                    <button mat-raised-button color="primary" (click)="joinTournament(selectedTournament)">JOIN</button>
+                </mat-card-actions>
+            </div>
+        </div>
         </mat-card>
     
-</div>
 </div>
 
 
