--- a/src/app/check-tournament-parent/check-tournament-parent.component.css
+++ b/src/app/check-tournament-parent/check-tournament-parent.component.css
@@ -12,21 +12,22 @@
 .tourneyCard {
     margin: 10px;
     padding: 10px;
+    width: 100%;
 }
 .wrap{
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 3fr;
 }
 
 
 @media only screen and (min-width: 1024px) {  
     .cardList {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
+        flex-flow: column wrap;
     
     }
     .wrap{
         display: grid;
-        grid-template-columns: 1fr 5fr;
+        grid-template-columns: 1fr 3fr;
     }
 }
