--- a/src/app/check-tournament-parent/check-tournament-parent.component.html
+++ b/src/app/check-tournament-parent/check-tournament-parent.component.html
@@ -7,7 +7,7 @@
                 <mat-card-subtitle>{{tour.type}}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-actions>
-                <button mat-button (click)="queryServer(tour.id)" id={{tour.id}}>VIEW</button>
+                <button mat-raised-button color="primary" (click)="queryServer(tour.id)" id={{tour.id}}>VIEW</button>
             </mat-card-actions>
         </mat-card>
     </div>
