--- a/src/app/show-organized-tourney/show-organized-tourney.component.html
+++ b/src/app/show-organized-tourney/show-organized-tourney.component.html
@@ -1,6 +1,6 @@
 <div class="cardList">
 <div *ngFor="let tourney of organizedList">
-
+        <app-single-bracket-user-view></app-single-bracket-user-view>
     <mat-card class="tourneyCard">
         <mat-card-header>
             <mat-card-title>{{tourney.name}}</mat-card-title>
