--- a/src/app/single-bracket-user-view/single-bracket-user-view.component.html
+++ b/src/app/single-bracket-user-view/single-bracket-user-view.component.html
@@ -140,9 +140,8 @@
           <ul class="bracket bracket-4">
             <li class="team-item">{{bracketPos13.userName}}<time>VS</time> {{bracketPos14.userName}}</li>
           </ul>  
-      
           <ul class="bracket bracket-5">
-            <li class="team-item">Champion</li>
+            <li class="team-item">{{bracketPos15.userName}}</li>
           </ul>  
         </div>
       </div>
