--- a/src/app/single-bracket-user-view/single-bracket-user-view.component.css
+++ b/src/app/single-bracket-user-view/single-bracket-user-view.component.css
@@ -1,120 +1,4 @@
-/* @import 'https://fonts.googleapis.com/css?family=Roboto+Slab:400,700';
-html {
-  font-size: 1rem;
-}
-
-body {
-  background: #f0f2f2;
-}
-
-h1, h5 {
-  color:white;
-}
-
-.bracket .round {
-  display: inline-block;
-  vertical-align: middle;
-}
-.bracket .round .winners > div {
-  display: inline-block;
-  vertical-align: middle;
-}
-.bracket .round .winners > div.matchups .matchup:last-child {
-  margin-bottom: 0 !important;
-}
-.bracket .round .winners > div.matchups .matchup .participants {
-  border-radius: 0.25rem;
-  overflow: hidden;
-}
-.bracket .round .winners > div.matchups .matchup .participants .participant {
-  box-sizing: border-box;
-  color: #858585;
-  border-left: 0.25rem solid #ffffff;
-  background: rgb(128, 128, 128);
-  width: 14rem;
-  height: 3rem;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
-}
-.bracket .round .winners > div.matchups .matchup .participants .participant.winner {
-  color: #60c645;
-  border-color: #60c645;
-}
-.bracket .round .winners > div.matchups .matchup .participants .participant.loser {
-  color: #dc563f;
-  border-color: #dc563f;
-}
-.bracket .round .winners > div.matchups .matchup .participants .participant:not(:last-child) {
-  border-bottom: thin solid #f0f2f2;
-}
-
-.bracket .round .winners > div.connector.filled .line, .bracket .round .winners > div.connector.filled.bottom .merger:after, .bracket .round .winners > div.connector.filled.top .merger:before {
-  border-color: #60c645;
-}
-.bracket .round .winners > div.connector .line, .bracket .round .winners > div.connector .merger {
-  box-sizing: border-box;
-  width: 2rem;
-  display: inline-block;
-  vertical-align: top;
-}
-.bracket .round .winners > div.connector .line {
-  border-bottom: thin solid #c0c0c8;
-  height: 4rem;
-}
-.bracket .round .winners > div.connector .merger {
-  position: relative;
-  height: 8rem;
-}
-.bracket .round .winners > div.connector .merger:before, .bracket .round .winners > div.connector .merger:after {
-  content: "";
-  display: block;
-  box-sizing: border-box;
-  width: 100%;
-  height: 50%;
-  border: 0 solid;
-  border-color: #c0c0c8;
-}
-.bracket .round .winners > div.connector .merger:before {
-  border-right-width: thin;
-  border-top-width: thin;
-}
-.bracket .round .winners > div.connector .merger:after {
-  border-right-width: thin;
-  border-bottom-width: thin;
-}
-.bracket .round.quarterfinals .winners:not(:last-child) {
-  margin-bottom: 2rem;
-}
-.bracket .round.quarterfinals .winners .matchups .matchup:not(:last-child) {
-  margin-bottom: 2rem;
-}
-.bracket .round.semifinals .winners .matchups .matchup:not(:last-child) {
-  margin-bottom: 10rem;
-}
-.bracket .round.semifinals .winners .connector .merger {
-  height: 16rem;
-}
-.bracket .round.semifinals .winners .connector .line {
-  height: 8rem;
-}
-.bracket .round.finals .winners .connector .merger {
-  height: 3rem;
-}
-.bracket .round.finals .winners .connector .line {
-  height: 1.5rem;
-}  */
-
-/*!
- * Responsive Tournament Bracket
- * Copyright 2016 Jakub Hájek
- * Licensed under MIT (https://opensource.org/licenses/MIT)
- */
-
- @import 'https://fonts.googleapis.com/css?family=Work+Sans:300,400,600,700&subset=latin-ext';
- /*!
-  * Responsive Tournament Bracket
-  * Copyright 2016 Jakub Hájek
-  * Licensed under MIT (https://opensource.org/licenses/MIT)
-  */
+@import 'https://fonts.googleapis.com/css?family=Work+Sans:300,400,600,700&subset=latin-ext';
  
   html {
     height: 100%;
@@ -130,13 +14,14 @@ h1, h5 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid black;
  }
   .tournament-headers h3 {
     width: 25%;
     text-align: center;
     font-weight: 400;
-    border-right: 1px dashed #ccc;
+    border-right: 1px solid black;
+    background-color: #7B1FA2;
     margin: 0;
     padding: 1rem;
  }
@@ -156,7 +41,7 @@ h1, h5 {
     flex-direction: column;
     justify-content: space-around;
     list-style-type: none;
-    border-right: 1px dashed #ccc;
+    border-right: 1px solid black;
     flex: 1;
  }
   .team-item {
@@ -171,7 +56,7 @@ h1, h5 {
  }
   .team-item:after {
     content: '';
-    border-color: #4f7a38;
+    border-color: black;
     border-width: 2px;
     position: absolute;
     display: block;
@@ -192,7 +77,7 @@ h1, h5 {
  }
   .team-item:before {
     content: '';
-    border-top: 2px solid #4f7a38;
+    border-top: 2px solid black;
     position: absolute;
     height: 2px;
     width: 10px;
