--- a/src/app/check-tournament-child/check-tournament-child.component.html
+++ b/src/app/check-tournament-child/check-tournament-child.component.html
@@ -23,8 +23,8 @@
                 </mat-card-actions>
             </div>
         </div>
-        </mat-card>
-    
+        </mat-card>    
 </div>
+<app-single-bracket-user-view *ngIf="selectedTournament" [tournamentId] = 'grabbedTourneyId' ></app-single-bracket-user-view>
 
 
