--- a/src/app/create-tournament-form/create-tournament-form.component.html
+++ b/src/app/create-tournament-form/create-tournament-form.component.html
@@ -43,8 +43,8 @@
             name="type">
                 <mat-option disabled>Select a Tournament Type</mat-option>
                 <mat-option value="single-elimination">Single Elimination</mat-option>
-                <mat-option value="double-elimination">Double Elimination</mat-option>
-                <mat-option value="round-robin">Round Robin</mat-option>
+                <mat-option value="double-elimination" disabled>Double Elimination</mat-option>
+                <mat-option value="round-robin" disabled>Round Robin</mat-option>
         </mat-select>
       </mat-form-field>
         
