--- a/src/app/single-bracket-user-view/single-bracket-user-view.component.html
+++ b/src/app/single-bracket-user-view/single-bracket-user-view.component.html
@@ -1,124 +1,4 @@
-<!-- <p>Single Elimination - Team View</p>
-
-<hr>
-
-<mat-card>
-    <div class="bracket">
-        <section class="round quarterfinals">
-            <div class="winners">
-                <div class="matchups">
-                    <div class="matchup">
-                        <div class="participants">
-                            <h5>1-1</h5>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos1.userName}}</h1>
-                            </mat-card>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos2.userName}}</h1>
-                            </mat-card>
-                        </div>
-                    </div>
-                    <div class="matchup">
-                        <div class="participants">
-                            <h5>1-2</h5>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos3.userName}}</h1>
-                            </mat-card>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos4.userName}}</h1>
-                            </mat-card>
-                        </div>
-                    </div>
-                </div>
-                <div class="connector">
-                    <div class="merger"></div>
-                    <div class="line"></div>
-                </div>
-            </div>
-            <div class="winners">
-                <div class="matchups">
-                    <div class="matchup">
-                        <div class="participants">
-                            <h5>1-3</h5>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos5.userName}}</h1>
-                            </mat-card>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos6.userName}}</h1>
-                            </mat-card>
-                        </div>
-                    </div>
-                    <div class="matchup">
-                        <div class="participants">
-                            <h5>1-4</h5>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos7.userName}}</h1>
-                            </mat-card>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos8.userName}}</h1>
-                            </mat-card>
-                        </div>
-                    </div>
-                </div>
-                <div class="connector">
-                    <div class="merger"></div>
-                    <div class="line"></div>
-                </div>
-            </div>
-        </section>
-        <section class="round semifinals">
-            <div class="winners">
-                <div class="matchups">
-                    <div class="matchup">
-                        <div class="participants">
-                            <h5>2-1</h5>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos9.userName}}</h1>
-                            </mat-card>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos10.userName}}</h1>
-                            </mat-card>
-                        </div>
-                    </div>
-                    <div class="matchup">
-                        <div class="participants">
-                            <h5>2-2</h5>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos11.userName}}</h1>
-                            </mat-card>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos12.userName}}</h1>
-                            </mat-card>
-                        </div>
-                    </div>
-                </div>
-                <div class="connector">
-                    <div class="merger"></div>
-                    <div class="line"></div>
-                </div>
-            </div>
-        </section>
-        <section class="round finals">
-            <div class="winners">
-                <div class="matchups">
-                    <div class="matchup">
-                        <div class="participants">
-                            <h5>3-1</h5>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos13.userName}}</h1>
-                            </mat-card>
-                            <mat-card class='participant'>
-                                <h1>{{bracketPos14.userName}}</h1>
-                            </mat-card>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
-</mat-card> -->
-
-<div class="tournament-container">
+<mat-card class="tournament-container">
         <div class="tournament-headers">
           <h3>Quarter-Finals</h3>
           <h3>Semi-Finals</h3>
@@ -144,4 +24,4 @@
             <li class="team-item">{{bracketPos15.userName}}</li>
           </ul>  
         </div>
-      </div>
+    </mat-card>
