--- a/src/app/single-bracket-user-view/single-bracket-user-view.component.css
+++ b/src/app/single-bracket-user-view/single-bracket-user-view.component.css
@@ -1,35 +1,30 @@
-@import 'https://fonts.googleapis.com/css?family=Work+Sans:300,400,600,700&subset=latin-ext';
- 
-  html {
-    height: 100%;
-    width: 100%;
- }
-  body {
-    font-family: sans-serif;
-    margin: 0;
-    height: 100%;
- }
+.tournament-container {
+  margin-left: 50px;
+  margin-top: 10px;
+  width: 200%;
+}  
   .tournament-headers {
     flex-grow: 1;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(66,66,66);
  }
   .tournament-headers h3 {
     width: 25%;
     text-align: center;
     font-weight: 400;
-    border-right: 1px solid black;
+    border-right: 1px solid rgb(66,66,66);
     background-color: #7B1FA2;
     margin: 0;
     padding: 1rem;
+    border-radius: 5px;
  }
   .tournament-brackets {
     display: flex;
     flex-direction: row;
     list-style-type: none;
-    background: #fdfdfd;
+    background: rgb(66,66,66);
     margin-bottom: 50px;
  }
   .bracket {
@@ -41,11 +36,11 @@
     flex-direction: column;
     justify-content: space-around;
     list-style-type: none;
-    border-right: 1px solid black;
+    border-right: 1px solid rgb(66,66,66);
     flex: 1;
  }
   .team-item {
-    background-color: #808080;
+    background-color: rgba(0,0,0,0.65);
     padding: 0.5rem;
     display: block;
     margin: 0.5rem 10px;
@@ -53,10 +48,11 @@
     vertical-align: middle;
     line-height: 2;
     text-align: center;
+    border-radius: 5px;
  }
   .team-item:after {
     content: '';
-    border-color: black;
+    border-color: rgb(66,66,66);
     border-width: 2px;
     position: absolute;
     display: block;
@@ -77,7 +73,7 @@
  }
   .team-item:before {
     content: '';
-    border-top: 2px solid black;
+    border-top: 2px solid rgb(66,66,66);
     position: absolute;
     height: 2px;
     width: 10px;
@@ -119,8 +115,12 @@
  }
   .team-item time {
     display: inline-block;
-    background-color: #dbdbdb;
+    background-color: rgba(0,0,0,0.65);
     font-size: 0.8rem;
     padding: 0 0.6rem;
+    border-radius: 5px;
  }
-  
+
+ time {
+  margin: 5px;
+ }
