--- a/src/app/single-bracket/single-bracket.component.html
+++ b/src/app/single-bracket/single-bracket.component.html
@@ -1,7 +1,3 @@
-<p>Single Elimination</p>
-
-<hr>
-
 <mat-card>    
   <div class="bracket">
     <section class="round quarterfinals">
@@ -11,7 +7,7 @@
             <div class="participants">
               <mat-card class='participant' >
                 <mat-form-field>
-                  <mat-placeholder>{{bracketPos1.userName}}</mat-placeholder>
+                  <mat-placeholder *ngIf="bracketPos1">{{bracketPos1.userName}}</mat-placeholder>
                   <mat-select id="1a" [(ngModel)]="bracketPos['1a']" (ngModelChange)="onBracketPos($event,'1a')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -19,7 +15,7 @@
               </mat-card>
               <mat-card class='participant'>
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos2.userName}}</mat-placeholder>
+                    <mat-placeholder  *ngIf="bracketPos2">{{bracketPos2.userName}}</mat-placeholder>
                   <mat-select id="1b" [(ngModel)]="bracketPos['1b']" (ngModelChange)="onBracketPos($event,'1b')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -31,7 +27,7 @@
             <div class="participants">
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos3.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos3">{{bracketPos3.userName}}</mat-placeholder>
                   <mat-select id="1c" [(ngModel)]="bracketPos['1c']" (ngModelChange)="onBracketPos($event,'1c')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -39,7 +35,7 @@
               </mat-card>
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos4.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos4">{{bracketPos4.userName}}</mat-placeholder>
                   <mat-select id="1d" [(ngModel)]="bracketPos['1d']" (ngModelChange)="onBracketPos($event,'1d')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -59,7 +55,7 @@
             <div class="participants">
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos5.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos5">{{bracketPos5.userName}}</mat-placeholder>
                   <mat-select id="1e" [(ngModel)]="bracketPos['1e']" (ngModelChange)="onBracketPos($event,'1e')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -67,7 +63,7 @@
               </mat-card>
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos6.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos6">{{bracketPos6.userName}}</mat-placeholder>
                   <mat-select id="1f" [(ngModel)]="bracketPos['1f']" (ngModelChange)="onBracketPos($event,'1f')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -79,7 +75,7 @@
             <div class="participants">
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos7.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos7">{{bracketPos7.userName}}</mat-placeholder>
                   <mat-select id="1g" [(ngModel)]="bracketPos['1g']" (ngModelChange)="onBracketPos($event,'1g')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -87,7 +83,7 @@
               </mat-card>
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos8.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos8">{{bracketPos8.userName}}</mat-placeholder>
                   <mat-select id="1h" [(ngModel)]="bracketPos['1h']" (ngModelChange)="onBracketPos($event,'1h')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -109,7 +105,7 @@
             <div class="participants">
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos9.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos9">{{bracketPos9.userName}}</mat-placeholder>
                   <mat-select id="2a" [(ngModel)]="bracketPos['2a']" (ngModelChange)="onBracketPos($event,'2a')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -117,7 +113,7 @@
               </mat-card>
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos10.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos10">{{bracketPos10.userName}}</mat-placeholder>
                   <mat-select id="2b" [(ngModel)]="bracketPos['2b']" (ngModelChange)="onBracketPos($event,'2b')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -129,7 +125,7 @@
             <div class="participants">
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos11.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos11">{{bracketPos11.userName}}</mat-placeholder>
                   <mat-select id="2c" [(ngModel)]="bracketPos['2c']" (ngModelChange)="onBracketPos($event,'2c')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -137,7 +133,7 @@
               </mat-card>
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos12.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos12">{{bracketPos12.userName}}</mat-placeholder>
                   <mat-select id="2d" [(ngModel)]="bracketPos['2d']" (ngModelChange)="onBracketPos($event,'2d')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -159,7 +155,7 @@
             <div class="participants">
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos13.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos13">{{bracketPos13.userName}}</mat-placeholder>
                   <mat-select id="3a" [(ngModel)]="bracketPos['3a']" (ngModelChange)="onBracketPos($event,'3a')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -167,7 +163,7 @@
               </mat-card>
               <mat-card class='participant' >
                 <mat-form-field>
-                    <mat-placeholder>{{bracketPos14.userName}}</mat-placeholder>
+                    <mat-placeholder *ngIf="bracketPos14">{{bracketPos14.userName}}</mat-placeholder>
                   <mat-select id="3b" [(ngModel)]="bracketPos['3b']" (ngModelChange)="onBracketPos($event,'3b')">
                     <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                   </mat-select>
@@ -185,7 +181,7 @@
               <div class="participants">
                 <mat-card class='participant' >
                   <mat-form-field>
-                      <mat-placeholder>{{bracketPos15.userName}}</mat-placeholder>
+                      <mat-placeholder *ngIf="bracketPos15">{{bracketPos15.userName}}</mat-placeholder>
                     <mat-select id="4a" [(ngModel)]="bracketPos['4a']" (ngModelChange)="onBracketPos($event,'4a')">
                       <mat-option *ngFor="let t of tournamentParticipantList" [value]="t.id">{{t.userName}}</mat-option>
                     </mat-select>
